# action-atlas

./: .gitignore  README.md  index.html  pyproject.toml
action_atlas/: azure_openai.py  download_yt_videos.py  eval.py  eval_proprietary.py  eval_qwen2_vl.py  extract_segments.py  lexical_search.py  obfuscate_text.py  prompts.py
action_atlas/utils/: __init__.py  eval_utils.py  file_utils.py  gcs.py  video_utils.py
static/: localize.html  verify.html
static/css/: index.css
